--- a/index.html
+++ b/index.html
@@ -33,5 +33,40 @@
             </div>
         </div>
     </header>
+    <section class="banner">
+        <div class="slide">
+            <div class="sub-slide">
+                
+            </div>
+        </div>
+    </section>
+    <section class="main-body">
+        <div class="sub-body">
+            <div class="left-body">
+                <div class="first-list">
+                    <ul>
+                    <li>Completely Synergize</li>
+                    <li>Resource Taxing</li>
+                    <li>Premier Niche Markets</li>
+                    <li>Dynamically Innovate</li>
+                    <li>Objectively Innovate</li>
+                    <li>Proactively Envisioned</li>
+                    </ul>
+                </div>
+                <div class="second-list">
+                    <ul>
+                        <li>Dramatically Engage</li>
+                        <li><p>Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p></li>
+                        <li><input type="button" value="Engage"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="centre-body">
+             </div>
+            <div class="right-body">
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
